Fix blurry stormtrooper image

--- a/src/styles.css
+++ b/src/styles.css
@@ -323,7 +323,6 @@ footer h2 {
     }
 
     footer > picture {
-        flex: 1;
         display: flex;
         justify-content: center;
     }
